<resources>
    <string name="app_name">Nest Hunt</string>
    <string name="enter_mobile_numbe_for_verification">Enter Mobile Number For Verification</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="continue1">continue</string>
    <string name="enter_otp">enter OTP</string>
    <string name="enter_otp_for_verification">Enter OTP for Verification</string>
    <string name="contact_number">contact number:</string>
    <string name="amenities">Amenities:</string>
    <string name="add_your_property">Add your Property</string>
    <string name="heyy_there">Heyy There,</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="pay_rent">Pay Rent</string>
    <string name="log_out">Log out</string>
    <string name="otp_not_received_resend">OTP not received? Resend</string>
</resources>